  that surround their targets in a ring of miasma clouds.
* Hellfire has been renamed to Damnation, and no longer melts ice.
* Chaos champions lose Chaotic Mirror and instead gain Call of Chaos, an
  ability which applies (usually) positive status effects to nearby allies.
* Mnoleg gains Call of Chaos (as above), Random Bolt, and Dig.
* Gloorx Vloq gains Summon Executioners and Black Mark.
* Salamander stormcallers' chant does not need to be continuous; they now
  only need to try to cast Fire Storm at their target three times for it to
  trigger.
* Entropy weavers' corrosion is now instant and smite-targeted, but only
  applies one level of corrosion.
* Ice devils are now tier 4 demons, and are weakened slightly.
* Hellwings now have the swoop attack formerly possessed by blue devils.
* Shock serpents' discharge now only strikes whatever hit it.
* Salamander mystics lose Localised Ignite Poison.
* Deep elf high priests & sorcerers can no longer cast Summon Demon.
* Natasha, deep elf knights, and salamander stormcallers can no longer cast
  Conjure Flame.
* Banishment from powerful monsters can now send you deeper into the Abyss
  than Abyss:1.
* Deep elf mages are now stronger and have new spell sets, including spells
  previously cast by deep elf conjurers and summoners.
* The Sap Magic effect from demonspawn warmongers now has three fixed levels of
  success rate penalty, rather than scaling continuously. Each spell cast while
  under the Sap effect has a fixed chance to increase the penalty level.
* Demonspawn corruptors' Corrupt Body spell is now a single-target version of
  the same spell used by wretched stars. These spells both now try to apply
  multiple levels of a single random temporary mutation instead of giving many
  different kinds.
* Ancient champions and death knights no longer have the Haunt spell.
* Swamp worms are now amphibious and generate submerged, emerging to attack the
  player and never resubmerging.